--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native": "0.61.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-floating-action": "^1.19.1",
-    "react-native-sqlite-storage": "^4.1.0"
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-sqlite-storage": "^4.1.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.2"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
