--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^2.1.0",
+    "@react-native-community/datetimepicker": "2.1.0",
     "react": "16.9.0",
     "react-native": "0.61.3",
-    "react-native-gesture-handler": "^1.5.0",
-    "react-native-sqlite-storage": "^4.1.0",
-    "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3",
-    "rn-fetch-blob": "^0.11.2"
+    "react-native-gesture-handler": "1.5.0",
+    "react-native-sqlite-storage": "4.1.0",
+    "react-native-vector-icons": "6.6.0",
+    "react-navigation": "4.0.10",
+    "react-navigation-stack": "1.10.3",
+    "rn-fetch-blob": "0.11.2"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
