--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.1.0",
+    "@react-native-community/segmented-control": "^1.0.2",
+    "eslint-plugin-react": "^7.16.0",
+    "mem": "^4.3.0",
     "react": "16.9.0",
     "react-native": "0.61.3",
-    "react-native-gesture-handler": "^1.5.0",
+    "react-native-gesture-handler": "^1.5.1",
     "react-native-sqlite-storage": "^4.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
