--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.61.3",
     "react-native-gesture-handler": "^1.5.1",
     "react-native-ios-kit": "0.0.7",
+    "react-native-screens": "1.0.0-alpha.23",
     "react-native-sqlite-storage": "^4.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
